--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "dev": "npm run storybook",
     "old-dev": "vite",
-    "build": "tsc && vite build",
+    "old-build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build": "storybook build -o dist"
   },
   "dependencies": {
     "react": "^18.2.0",
