--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "component-library",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "npm run storybook",
-    "old-dev": "vite",
-    "old-build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build": "storybook build -o dist"
+    "build": "storybook build -o public"
   },
   "dependencies": {
     "react": "^18.2.0",
