--- a/.github/workflows/firebase-hosting-merge-test.yml
+++ b/.github/workflows/firebase-hosting-merge-test.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_COMPONENTS_LIBRARY_TEST }}"
-          channelId: test
+          channelId: live
           projectId: components-library-test
