--- a/.firebaserc
+++ b/.firebaserc
@@ -1,9 +1,5 @@
 {
   "projects": {
-    "default": "components-library-test",
-    "cl-test": "components-library-test",
-    "cl-prod": "components-library-prod"
-  },
-  "targets": {},
-  "etags": {}
+    "default": "demos-component-library"
+  }
 }
