--- a/.github/workflows/firebase-hosting-merge-develop.yml
+++ b/.github/workflows/firebase-hosting-merge-develop.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_COMPONENTS_LIBRARY_TEST }}"
-          channelId: live
-          projectId: components-library-test
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEMOS_COMPONENT_LIBRARY }}"
+          channelId: develop
+          projectId: demos-component-library
