Intake form basic functionalities
Intake form basic functionalities with still in progress

--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "build": "storybook build -o public"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "date-fns": "^2.30.0",
+    "formik": "^2.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yup": "^1.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.18",
