--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "date-fns": "^2.30.0",
+    "@types/react-datepicker": "^4.11.2",
     "formik": "^2.4.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "yup": "^1.2.0",
     "zod": "^3.21.4"
