--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build -o public",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "npm run build && git push --follow-tags && npm publish"
   },
   "author": "GPS Demo Team",
   "license": "ISC",
