--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gps-demos/component-library",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.2.0",
   "type": "module",
   "files": [
     "dist"
@@ -20,7 +20,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build -o public",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && build-storybook",
     "preview": "vite preview",
     "release": "npm run build && git push --follow-tags && npm publish"
   },
