--- a/package.json
+++ b/package.json
@@ -1,17 +1,46 @@
 {
-  "name": "component-library",
-  "private": true,
-  "version": "0.0.1",
+  "name": "@gps-demos/component-library",
+  "private": false,
+  "version": "0.2.0",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/component-library.umd.cjs",
+  "module": "./dist/component-library.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/component-library.js",
+      "require": "./dist/component-library.umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "npm run storybook",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "storybook": "storybook dev -p 6006",
-    "build": "storybook build -o public"
+    "build-storybook": "storybook build -o public",
+    "build": "tsc && vite build && npm run build-storybook",
+    "preview": "vite preview",
+    "release": "npm run build && git push --follow-tags && npm publish"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GPS-Demos/component-library.git"
+  },
+  "keywords": [],
+  "author": "GPS Demo Team",
+  "license": "ISC",
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@types/react-datepicker": "^4.11.2",
+    "formik": "^2.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-datepicker": "^4.16.0",
+    "react-dom": "^18.2.0",
+    "vite-plugin-dts": "^3.5.1",
+    "yup": "^1.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.18",
@@ -36,6 +65,12 @@
     "prop-types": "^15.8.1",
     "storybook": "^7.0.18",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "formik": "^2.4.1"
   }
 }
