--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gps-demos/component-library",
-  "private": true,
-  "version": "0.0.1",
+  "private": false,
+  "version": "0.2.0",
   "type": "module",
   "files": [
     "dist"
@@ -20,9 +20,15 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build -o public",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build && npm run build-storybook",
+    "preview": "vite preview",
+    "release": "npm run build && git push --follow-tags && npm publish"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GPS-Demos/component-library.git"
+  },
+  "keywords": [],
   "author": "GPS Demo Team",
   "license": "ISC",
   "dependencies": {
