--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.0.3",
+    "daisyui": "^3.6.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
@@ -69,8 +69,8 @@
     "vite-tsconfig-paths": "^4.2.0"
   },
   "peerDependencies": {
+    "formik": "^2.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "formik": "^2.4.1"
+    "react-dom": "^18.2.0"
   }
 }
